Test fix for Safari nav bar layout issues

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -432,7 +432,7 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 	color: #9c9c9c;
 }
 
-.width100 {
+.width100pct {
 	width: 100%;
 }
 
